# gen/http/openapi3.yaml
@@ -20,8 +20,8 @@ paths:
         schema:
           type: string
           description: Name
-          example: Officia vero fugiat cumque.
-        example: Iure dolore.
+          example: Exercitationem recusandae natus molestiae mollitia autem aliquid.
+        example: Velit fugiat sint velit.
       responses:
         "200":
           description: OK response.
@@ -29,8 +29,31 @@ paths:
             application/json:
               schema:
                 type: string
-                example: Ea ut voluptatum.
-              example: Est voluptatibus cum et quasi magni.
+                example: Velit sapiente voluptas vitae.
+              example: Incidunt ut id ad.
+  /todo:
+    post:
+      tags:
+      - todo
+      summary: create todo
+      operationId: todo#create
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateRequestBody'
+            example:
+              title: Corrupti odit enim nisi itaque eveniet.
+      responses:
+        "200":
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Qui ea aut labore vel est.
+              example: Accusantium iusto odit consectetur.
   /todo/{id}:
     get:
       tags:
@@ -45,9 +68,9 @@ paths:
         schema:
           type: integer
           description: ID
-          example: 5029119594382279781
+          example: 7006260920311031844
           format: int64
-        example: 3130548282279138188
+        example: 5096165957399080004
       responses:
         "200":
           description: OK response.
@@ -56,31 +79,112 @@ paths:
               schema:
                 $ref: '#/components/schemas/Todo'
               example:
-                id: 151656195322834973
-                is_done: true
-                title: Aperiam minima mollitia.
+                id: 4180047692902679739
+                is_done: false
+                title: Enim cupiditate eaque.
+    put:
+      tags:
+      - todo
+      summary: update todo
+      operationId: todo#update
+      parameters:
+      - name: id
+        in: path
+        description: ID
+        required: true
+        schema:
+          type: integer
+          description: ID
+          example: 2574703810873729065
+          format: int64
+        example: 4072514244001839058
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UpdateRequestBody'
+            example:
+              is_done: false
+      responses:
+        "200":
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Pariatur est dolor impedit officiis.
+              example: Illum at.
+  /todo/{id}/delete:
+    delete:
+      tags:
+      - todo
+      summary: delete todo
+      operationId: todo#delete
+      parameters:
+      - name: id
+        in: path
+        description: ID
+        required: true
+        schema:
+          type: integer
+          description: ID
+          example: 3419246686277817111
+          format: int64
+        example: 7942520797027556032
+      responses:
+        "200":
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Repellat et voluptates.
+              example: Fugit placeat possimus quo temporibus dolores.
 components:
   schemas:
+    CreateRequestBody:
+      type: object
+      properties:
+        title:
+          type: string
+          description: Title
+          example: Autem molestias qui.
+      example:
+        title: Omnis molestiae similique.
+      required:
+      - title
     Todo:
       type: object
       properties:
         id:
           type: integer
           description: ID
-          example: 4118086402290002102
+          example: 2102489054497879557
           format: int64
         is_done:
           type: boolean
           description: IsDone
-          example: true
+          example: false
         title:
           type: string
           description: Title
-          example: Ea quia rerum enim cupiditate eaque nihil.
+          example: Voluptates ea provident voluptates natus eveniet quam.
       example:
-        id: 7041713459340774230
+        id: 6581644742103128896
+        is_done: false
+        title: Officia est neque.
+    UpdateRequestBody:
+      type: object
+      properties:
+        is_done:
+          type: boolean
+          description: IsDone
+          example: false
+      example:
         is_done: true
-        title: Enim nisi itaque eveniet consequatur aut ipsam.
+      required:
+      - is_done
 tags:
 - name: todo
   description: Service that manage todo.
